--- a/upload.html
+++ b/upload.html
@@ -16,7 +16,7 @@
         <p class="title_2" id="gen">나는 어떤 동물과 닮았을까?</p>
         <br><br>
         <p class="button_2">
-            <img src="./photo/upload.png" width="450" class="up"/>
+            <img src="./photo/upload.png" width="450" class="up" id="human_image"/>
             <img src="./photo/upload_hover.png" width="450" class="up_hover"/>
         </p>
         <br><br>
